# crewai_speaker_bio

./: README.md  pyproject.toml
src/speaker_introduction/: README.md  crew.py  flow.py  main.py
src/speaker_introduction/config/: agents.yaml  tasks.yaml
