[project]
name = "prep_for_meeting"
version = "0.1.0"
description = "prep-for-meeting using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
]

[project.scripts]
prep_for_meeting = "prep_for_meeting.main:run"
run_crew = "prep_for_meeting.main:run"
train = "prep_for_meeting.main:train"
replay = "prep_for_meeting.main:replay"
test = "prep_for_meeting.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
