[project]
name = "speaker_introduction"
version = "0.1.0"
description = "prep-for-meeting using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
]

[project.scripts]
speaker_introduction = "speaker_introduction.main:run"
run_crew = "speaker_introduction.main:run"
train = "speaker_introduction.main:train"
replay = "speaker_introduction.main:replay"
test = "speaker_introduction.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speaker_introduction"]
