[project]
name = "speaker_introduction"
version = "0.1.0"
description = "prep-for-meeting using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
    "python-dotenv>=1.0.0",
    "flask>=2.0.0",
    "gunicorn>=20.0.0",
    "flask_cors>=3.0.0",
]

[project.scripts]
speaker_introduction = "speaker_introduction.main:run"
run_crew = "speaker_introduction.main:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speaker_introduction"]
